# arglyzer

./: CMakeLists.txt  README.md  arglyzer.c  arglyzer.h  main.c  option.c  option.h  result.c  result.h
examples/: example1.c
include/: arglyzer.h  option.h  optionslist.h  result.h
src/: arglyzer.c  option.c  optionslist.c  result.c
